<resources>
    <string name="app_name">Wagba</string>
    <string name="Logo">logo</string>
    <string name="wagba_name">Wagba</string>
    <string name="image_description">Store image</string>
    <string name="shopping_cart_description">Shopping cart</string>
    <string name="margherita">Go back to where it all began with the classic cheese and tomato base.</string>
    <string name="cheeseLovers">A special blend of cheese with any two toppings of your choice</string>
    <string name="vegetarian">Mushrooms, green peppers, Onions, black olives, topped with mozzarella</string>
    <string name="pepperoni"> A meaty feast of pepperoni, mushroom, black olives, mozzarella cheese</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_orders">My Orders</string>
    <string name="sub_total">Sub Total</string>
    <string name="_360_egp">360 EGP</string>
    <string name="delivery">Delivery</string>
    <string name="_10_egp">10 EGP</string>
    <string name="total">Total</string>
    <string name="_370_egp">370 EGP</string>
    <string name="checkout">Checkout</string>
    <string name="margherita_name">Margherita</string>
    <string name="pizza_image">Pizza image</string>
    <string name="price_range">50 - 60 - 70 EGP</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="extra_cheese">Extra cheese</string>
    <string name="extra_pepperoni">Extra Pepperoni</string>
    <string name="deliver_at_12_pm">Deliver at 12 PM</string>
    <string name="deliver_at_3_pm">Deliver at 3 PM</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="welcome_to_wagba">Welcome to Wagba!</string>
    <string name="your_food_delivery_application">Your food delivery application</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account_yet">Dont have an account yet?</string>
    <string name="register_now">Register now!</string>
    <string name="delivery_area">Delivery Area:</string>
    <string name="gate_3">Gate 3</string>
    <string name="gate_4">Gate 4</string>
    <string name="payment_method">Payment Method:</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash">Cash</string>
    <string name="place_order">Place Order</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="app_logo">app_logo</string>
    <string name="pizza_hut">Pizza Hut</string>
    <string name="american">American</string>
    <string name="italian">Italian</string>
    <string name="dish_name">Dish Name</string>
    <string name="pizza_with_normal_sauce_and_mozzarella_cheese">pizza with normal sauce and mozzarella cheese</string>
    <string name="_160_egp">160 EGP</string>
    <string name="_2">2</string>
    <string name="add_icon">add_icon</string>
    <string name="minus_icon">minus_icon</string>
    <string name="fast_food">Fast food</string>
    <string name="order_history">Order History</string>
    <string name="search">search</string>
    <string name="search_here">Search here...</string>
    <string name="enter_icon">Enter icon</string>
    <string name="current_offers">Current Offers</string>
    <string name="categories">Categories</string>
    <string name="restaurants">Restaurants</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="order_placed">Order Placed</string>
    <string name="your_order_has_been_placed">Your order has been placed!</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="your_order_has_been_confirmed">Your order has been Confirmed!</string>
    <string name="preparing_order">Preparing Order</string>
    <string name="your_order_is_being_prepared">Your order is being prepared :)</string>
    <string name="order_out_for_delivery">Order out for Delivery</string>
    <string name="available">available</string>
    <string name="order_name">Order name</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="price">Price</string>
    <string name="order_details">Order Details</string>
    <string name="arrow">arrow</string>
    <string name="food_type">Food type</string>
    <string name="item1">1X Large Pepperoni Pizza</string>
    <string name="item2">2X Medium Cheesy Lovers Pizza</string>
    <string name="item3">1X Small Vegetarian Pizza</string>
    <string name="price_200_le">Price: 200 LE</string>
    <string name="price_60_le">Price: 60 LE</string>
    <string name="price_140_le">Price: 140 LE</string>
    <string name="total_410_le">Total: 410 LE</string>
    <string name="welcome_back_messgae">Welcome Back Jane Doe!</string>
</resources>