<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="25dp"
    app:cardElevation="5dp"
    android:clickable="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.07"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:focusable="true">


    <ImageView
        android:id="@+id/dish_img"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/image_description"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/dish_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:text="@string/dish_name"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/nexa_regular"
        android:textSize="24sp"
        android:textAlignment="center" />
    <ImageView
        android:id="@+id/availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_circle_outline_24"
        android:layout_marginTop="4dp"
        android:layout_marginStart="310dp"
        android:contentDescription="@string/available" />

    <TextView
        android:id="@+id/dish_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="40dp"
        android:paddingEnd="10dp"
        android:text="@string/margherita"
        android:fontFamily="@font/nexa_regular"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/dish_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="130dp"
        android:text="@string/_160_egp"
        android:visibility="visible"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/nexa_regular"
        android:textSize="16sp"
        />




</androidx.cardview.widget.CardView>
