<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="294dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/nexa_regular"
        android:text="@string/welcome_to_wagba"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/your_food_delivery_application"
        android:textSize="16sp"
        android:fontFamily="@font/nexa_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="110dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:fontFamily="@font/nexa_regular"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="318dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="318dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:autofillHints="password" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/nexa_regular"
        android:gravity="center"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:layout_width="210dp"
        android:layout_height="26dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/nexa_regular"
        android:text="@string/dont_have_an_account_yet"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:fontFamily="@font/nexa_regular"
        android:text="@string/register_now"
        android:textSize="16sp"
        android:textColor="@color/hyperlink_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBtn"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>