<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/order_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/sfuiext_old"
        android:text="@string/order_name"
        android:textColor="@color/dark_blue"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/restaurant_image"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="108dp"
        android:src="@drawable/burgerrr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toEndOf="@+id/order_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/nexa_regular"
        android:text="Date:"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/nexa_regular"
        android:text="@string/date"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/nexa_regular"
        android:text="Status:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_date" />

    <TextView
        android:id="@+id/order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/nexa_regular"
        android:text="@string/status"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/order_date" />

    <TextView
        android:id="@+id/order_price_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/nexa_regular"
        android:text="Price:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_status" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/nexa_regular"
        android:text="@string/price"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/order_price_main"
        app:layout_constraintTop_toBottomOf="@+id/order_status" />

    <ImageView
        android:id="@+id/arrow_down"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:layout_marginTop="210dp"
        app:layout_constraintEnd_toStartOf="@+id/more_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:focusable="true"
        android:contentDescription="@string/arrow" />

    <TextView
        android:id="@+id/more_info"
        android:layout_width="84dp"
        android:layout_height="19dp"
        android:fontFamily="@font/nexa_regular"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/order_details"
        android:clickable="true"
        android:layout_marginTop="210dp"
        android:textColor="@color/hyperlink_blue"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:focusable="true" />

    <ImageView
        android:id="@+id/food_type"
        android:layout_width="86dp"
        android:layout_height="76dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="28dp"
        android:src="@drawable/fastfood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/food_type" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expandable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

app:layout_constraintTop_toBottomOf="@id/more_info"        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <TextView
            android:id="@+id/order_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/nexa_regular"
            android:text="@string/item1"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nexa_regular"
            android:text="@string/item2"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_item1" />

        <TextView
            android:id="@+id/order_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nexa_regular"
            android:text="@string/item3"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_item2" />

        <TextView
            android:id="@+id/item2_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nexa_regular"
            android:text="@string/price_200_le"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item1_price" />

        <TextView
            android:id="@+id/item3_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nexa_regular"
            android:text="@string/price_60_le"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item2_price" />

        <TextView
            android:id="@+id/item1_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nexa_regular"
            android:text="@string/price_140_le"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/total_price_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nexa_regular"
            android:text="@string/total_410_le"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_item3"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginEnd="96dp"
            android:fontFamily="@font/nexa_regular"
            android:text="..."
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/delivery_area_history"
            app:layout_constraintEnd_toStartOf="@+id/item3_price"
            app:layout_constraintTop_toBottomOf="@+id/order_item3"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/delivery_area_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/nexa_regular"
            android:text="Gate 3"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/total_price_details"
            app:layout_constraintTop_toBottomOf="@+id/item3_price" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>