<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <TextView
        android:id="@+id/textView"
        android:layout_width="294dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/nexa_regular"
        android:text="@string/welcome_to_wagba"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/your_food_delivery_application"
        android:textSize="16sp"
        android:fontFamily="@font/nexa_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="165dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nexa_regular"
        android:text="@string/register_now"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <EditText
        android:id="@+id/Name"
        android:layout_width="318dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="318dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:hint="@string/phone_number"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        tools:ignore="TextFields"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="318dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="318dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:autofillHints="password" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="216dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/nexa_regular"
        android:gravity="center"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>